--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4",
-    "socket.io": "^4.7.5"
+    "react-hot-toast": "^2.4.1",
+    "socket.io": "^4.7.5",
+    "zustand": "^5.0.0-rc.2"
   }
 }
